--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,10 @@
     <string name="dashboard_nav_button_consultant">Consultants</string>
 
     <string name="consultant_dashboard_activity_title">Consultant Dashboard</string>
+    <string name="exercise_dashboard_activity_title">Exercise</string>
+    <string name="exercise_tab_text_1">Log</string>
+    <string name="exercise_tab_text_2">Workout Plans</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
