--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">LyfeStyle Tracker</string>
     <string name="login_title_text">Welcome to LyfeStyle Fitness Tracker!</string>
@@ -39,10 +40,31 @@
     <string name="user_consultants_tab_text_1">Consultants</string>
     <string name="user_consultants_tab_text_2">Suggested Plans</string>
     <string name="title_activity_add_sleep_entry">addSleepEntry</string>
+    <string name="add_entry">Add Entry</string>
+    <string name="sleep_time">Sleep Time</string>
+    <string name="sleep_rating">Sleep Rating</string>
+
+
+    <string-array name="planets_array">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+    </string-array>
+
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
     -->
     <string name="hello_world">Hello Square World!</string>
+    <string name="Add_date">Add Date</string>
 
 </resources>
