--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="sleep_rating">Sleep Rating</string>
     <string name="clients">Clients</string>
     <string name="my_plans">My Plans</string>
+    <string name="delete_account">Delete Account</string>
 
 
     <string-array name="planets_array">
