--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,10 @@
     <string name="consultant_dashboard_activity_title">Consultant Dashboard</string>
     <string name="exercise_dashboard_activity_title">Exercise</string>
     <string name="exercise_tab_text_1">Exercise Log</string>
+    <string name="exercise_log_header_time">Time</string>
+    <string name="exercise_log_header_description">Description</string>
+    <string name="exercise_log_header_calories_burnt">Calories\nBurnt</string>
+    <string name="exercise_log_header_length">Length</string>
     <string name="exercise_tab_text_2">Workout Plans</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
