--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,9 @@
     <string name="total_calories">Total Calories</string>
     <string name="number_of_servings"># Servings</string>
     <string name="type">Type</string>
+    <string name="username">Username</string>
+    <string name="rating">Rating</string>
+    <string name="company">Company</string>
 
 
     <string-array name="planets_array">
