--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="dashboard_nav_button_sleep">Sleep</string>
     <string name="dashboard_nav_button_consultant">Consultants</string>
 
+    <string name="consultant_user_tab_text_1">All Clients</string>
+    <string name="consultant_user_tab_text_2">All plans clients</string>
     <string name="consultant_dashboard_activity_title">Consultant Dashboard</string>
     <string name="exercise_dashboard_activity_title">Exercise</string>
     <string name="exercise_tab_text_1">Exercise Log</string>
@@ -56,6 +58,7 @@
     <string name="username">Username</string>
     <string name="rating">Rating</string>
     <string name="company">Company</string>
+    <string name="plans">Plans</string>
 
 
     <string-array name="planets_array">
@@ -81,5 +84,9 @@
     <string name="Add_date">Add Date</string>
     <string name="Confirm_Password">Confirm Password</string>
     <string name="Sign_UP">Register Account</string>
+    <string name="title_activity_consultant_user_dashboard">ConsultantUserDashboard</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="title_activity_consultant_plans">ConsultantPlans</string>
 
 </resources>
