added functionality to user list on the conusltant side

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,8 @@
     <string name="rating">Rating</string>
     <string name="company">Company</string>
     <string name="plans">Plans</string>
+    <string name="email">Email</string>
+    <string name="contract_number">Contract No.</string>
 
 
     <string-array name="planets_array">
