added the sorting and searching through table for meals

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="plans">Plans</string>
     <string name="email">Email</string>
     <string name="contract_number">Contract No.</string>
+    <string name="num_servings"># Servings</string>
 
 
     <string-array name="planets_array">
