need to access DB, basic setup for sign up page made

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,5 +110,7 @@
     <string name="title_activity_consultant_plans">ConsultantPlans</string>
     <string name="title_activity_create_user_consultant">CreateUserConsultant</string>
     <string name="CreateAccount">Create Account</string>
+    <string name="peopleName">Name</string>
+    <string name="signupPrompt">Register for LyfeStyle Tracking</string>
 
 </resources>
