--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,9 @@
     <string name="enter_fat">Enter Fat (g)</string>
     <string name="enter_num_servings">Enter Number of Servings</string>
 
+    <string name="available_consultants">Available consultants:</string>
+    <string name="hire_consultants">Hire consultant:</string>
+
 
     <string-array name="planets_array">
         <item>1</item>
