--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="plans">Plans</string>
     <string name="email">Email</string>
     <string name="contract_number">Contract No.</string>
-    <string name="num_servings"># Servings</string>
+    <string name="num_servings"># of\nServings</string>
     <string name="age_message">Enter New Age</string>
     <string name="weight_message">Enter New Weight</string>
     <string name="height_message">Enter New Height</string>
@@ -80,14 +80,14 @@
     <string name="sport_switch">Sport?</string>
     <string name="add_exercise">Add Exercise</string>
     <string name="add_meal">Add Meal</string>
-    <string name="enter_meal_id">Enter Meal Id</string>
-    <string name="enter_meal_desc">Enter Meal Description</string>
-    <string name="enter_meal_serving_size">Enter Serving Size (g)</string>
-    <string name="enter_meal_carbohydrates">Enter Carbohydrates (g)</string>
-    <string name="enter_meal_type">Enter Meal Type</string>
-    <string name="enter_meal_protein">Enter Proteins (g)</string>
-    <string name="enter_fat">Enter Fat (g)</string>
-    <string name="enter_num_servings">Enter Number of Servings</string>
+    <string name="enter_meal_id">Enter Meal ID</string>
+    <string name="enter_meal_desc">Enter Description</string>
+    <string name="enter_meal_serving_size">Enter Serving Size</string>
+    <string name="enter_meal_carbohydrates">Enter Carbohydrates</string>
+    <string name="enter_meal_type">Enter Type</string>
+    <string name="enter_meal_protein">Enter Protein</string>
+    <string name="enter_fat">Enter Fat</string>
+    <string name="enter_num_servings">Enter Servings Consumed</string>
 
     <string name="available_consultants">Available consultants:</string>
     <string name="hire_consultants">Hire consultant:</string>
@@ -107,6 +107,17 @@
     <string name="add_exercise_cardio_enter_avg_speed">Enter Average Speed</string>
     <string name="add_exercise_sport_enter_intensity">Enter Intensity</string>
     <string name="add_exercise_sport_enter_type">Enter Sport Type</string>
+
+    <string name="add_meal_id_label">Meal ID</string>
+    <string name="add_meal_type_label">Type</string>
+    <string name="add_meal_description_label">Description</string>
+    <string name="add_meal_serving_size_label">Serving Size (g)</string>
+    <string name="add_meal_carbohydrates_label">Carbohydrates (g)</string>
+    <string name="add_meal_fat_label">Fat (g)</string>
+    <string name="add_meal_protein_label">Protein (g)</string>
+    <string name="add_meal_number_of_servings_label">Number of Servings</string>
+
+
 
     <string-array name="planets_array">
         <item>1</item>
