--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,5 +162,6 @@
     <string name="person_age">Age</string>
     <string name="person_height">Height (cm)</string>
     <string name="person_weight">Current Weight (approx.)</string>
+    <string name="weekly_calories">User Weekly Calories</string>
 
 </resources>
