--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,6 +125,7 @@
     <string name="add_new_company">Add New Company</string>
     <string name="suggest_plan">Suggest Plan</string>
     <string name="customers">Customers:</string>
+    <string name="add_to_plan">Add to Plan</string>
 
 
     <string-array name="planets_array">
