--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,5 +166,6 @@
     <string name="person_weight">Current Weight (lbs)</string>
     <string name="weekly_calories">User Weekly Calories</string>
     <string name="consultant_su">[Consultant]</string>
+    <string name="lyfestyle_icon">LyfestyleICON</string>
 
 </resources>
